--- a/src/main/resources/com/example/texteditor/login-logout.fxml
+++ b/src/main/resources/com/example/texteditor/login-logout.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="223.0" prefWidth="388.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.texteditor.HelloController">
+   <children>
+      <TextField fx:id="txtUsername" layoutX="33.0" layoutY="23.0" prefHeight="40.0" prefWidth="322.0" promptText="USERNAME" />
+      <PasswordField fx:id="txtPassword" layoutX="33.0" layoutY="72.0" prefHeight="40.0" prefWidth="322.0" promptText="PASSWORD" />
+      <Label fx:id="lblLogin" layoutX="33.0" layoutY="127.0" text="label" />
+      <Button fx:id="btnLogin" layoutX="33.0" layoutY="161.0" mnemonicParsing="false" onAction="#onLogin" prefHeight="40.0" prefWidth="322.0" text="LOGIN" textFill="#201b1b">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
