--- a/src/main/resources/com/example/texteditor/hello-view.fxml
+++ b/src/main/resources/com/example/texteditor/hello-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -8,6 +9,8 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -23,22 +26,53 @@
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="E" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
+                     <graphic>
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../close.png" />
+                           </image>
+                           <viewport>
+                              <Rectangle2D />
+                           </viewport>
+                        </ImageView>
+                     </graphic>
                   </MenuItem>
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="mnOpen" mnemonicParsing="false" onAction="#onOpen" text="Open Text File">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="O" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
+                     <graphic>
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../open.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </MenuItem>
                   <MenuItem fx:id="mnSave" mnemonicParsing="false" onAction="#onSave" text="Save Text File">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="S" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
+                     <graphic>
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../save.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </MenuItem>
                   <MenuItem fx:id="mnNew" mnemonicParsing="false" onAction="#onNew" text="New File">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="N" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
+                     <graphic>
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../new.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </MenuItem>
             </items>
           </Menu>
@@ -71,32 +105,46 @@
    <bottom>
       <HBox alignment="CENTER" spacing="15.0">
          <children>
-            <Label fx:id="lblCols" prefHeight="42.0" prefWidth="83.0" text="Ln  , Col ">
+            <Label fx:id="lblCols" prefHeight="42.0" prefWidth="73.0" text="Ln  , Col ">
                <padding>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </padding>
             </Label>
-            <Label fx:id="lblDisplay" prefHeight="42.0" prefWidth="146.0" text="Characters Typed: ">
+            <Label fx:id="lblDisplay" prefHeight="42.0" prefWidth="126.0" text="Characters Typed: ">
                <padding>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </padding>
             </Label>
-            <Button fx:id="btnOpen" mnemonicParsing="false" onAction="#onOpen" prefHeight="40.0" prefWidth="161.0" text="Open Text File" textAlignment="CENTER">
+            <Button fx:id="btnOpen" mnemonicParsing="false" onAction="#onOpen" prefHeight="32.0" prefWidth="195.0" text="Open Text File" textAlignment="CENTER">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../icons/open.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="btnSave" graphicTextGap="5.0" mnemonicParsing="false" onAction="#onSave" prefHeight="29.0" prefWidth="102.0" text="Save">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../icons/save.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#onEdit" prefHeight="45.0" prefWidth="130.0" text="Edit">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnSave" mnemonicParsing="false" onAction="#onSave" prefHeight="40.0" prefWidth="176.0" text="Save To Text File">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#onEdit" prefHeight="40.0" prefWidth="130.0" text="Edit">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnLock" mnemonicParsing="false" onAction="#onLock" prefHeight="40.0" prefWidth="134.0" text="Lock">
+            <Button fx:id="btnLock" mnemonicParsing="false" onAction="#onLock" prefHeight="45.0" prefWidth="134.0" text="Lock">
                <font>
                   <Font size="18.0" />
                </font>
